--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
+    "chart.js": "^4.5.1",
     "motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
     "styled-components": "^6.1.19"
